Places controller for Guests, including localization
```console
yarn psy g:controller V1/Guest/Places index show
yarn psy sync
yarn spec spec/unit/controllers/V1/Guest/PlacesController.spec.ts
```
