# api/src/openapi/validation.openapi.json
@@ -6,6 +6,102 @@
     "description": "The autogenerated openapi spec for your app"
   },
   "paths": {
+    "/v1/guest/places": {
+      "parameters": [],
+      "get": {
+        "tags": [
+          "v1-guest-places"
+        ],
+        "description": "Place index endpoint for Guests",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PlaceSummaryForGuests"
+                  }
+                }
+              }
+            },
+            "description": "Success"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFound"
+          },
+          "409": {
+            "$ref": "#/components/responses/Conflict"
+          },
+          "422": {
+            "$ref": "#/components/responses/ValidationErrors"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/v1/guest/places/{id}": {
+      "parameters": [
+        {
+          "in": "path",
+          "name": "id",
+          "required": true,
+          "schema": {
+            "type": "string"
+          }
+        }
+      ],
+      "get": {
+        "tags": [
+          "v1-guest-places"
+        ],
+        "description": "Place show endpoint for Guests",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PlaceForGuests"
+                }
+              }
+            },
+            "description": "Success"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFound"
+          },
+          "409": {
+            "$ref": "#/components/responses/Conflict"
+          },
+          "422": {
+            "$ref": "#/components/responses/ValidationErrors"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
     "/v1/host/localized-texts/{id}": {
       "parameters": [
         {
@@ -848,6 +944,65 @@
           }
         }
       },
+      "PlaceForGuests": {
+        "type": "object",
+        "required": [
+          "displayStyle",
+          "id",
+          "rooms",
+          "sleeps",
+          "style",
+          "title"
+        ],
+        "properties": {
+          "displayStyle": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          },
+          "rooms": {
+            "type": "array",
+            "items": {
+              "anyOf": [
+                {
+                  "$ref": "#/components/schemas/RoomBathroomForGuests"
+                },
+                {
+                  "$ref": "#/components/schemas/RoomBedroomForGuests"
+                },
+                {
+                  "$ref": "#/components/schemas/RoomDenForGuests"
+                },
+                {
+                  "$ref": "#/components/schemas/RoomKitchenForGuests"
+                },
+                {
+                  "$ref": "#/components/schemas/RoomLivingRoomForGuests"
+                }
+              ]
+            }
+          },
+          "sleeps": {
+            "type": "integer"
+          },
+          "style": {
+            "type": "string",
+            "enum": [
+              "cabin",
+              "cave",
+              "cottage",
+              "dump",
+              "lean_to",
+              "tent",
+              "treehouse"
+            ]
+          },
+          "title": {
+            "type": "string"
+          }
+        }
+      },
       "PlaceSummary": {
         "type": "object",
         "required": [
@@ -859,6 +1014,21 @@
             "type": "string"
           },
           "name": {
+            "type": "string"
+          }
+        }
+      },
+      "PlaceSummaryForGuests": {
+        "type": "object",
+        "required": [
+          "id",
+          "title"
+        ],
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "title": {
             "type": "string"
           }
         }
@@ -900,6 +1070,40 @@
               "integer",
               "null"
             ]
+          },
+          "type": {
+            "type": "string",
+            "enum": [
+              "Bathroom",
+              "Bedroom",
+              "Den",
+              "Kitchen",
+              "LivingRoom"
+            ]
+          }
+        }
+      },
+      "RoomBathroomForGuests": {
+        "type": "object",
+        "required": [
+          "bathOrShowerType",
+          "displayType",
+          "id",
+          "title",
+          "type"
+        ],
+        "properties": {
+          "bathOrShowerType": {
+            "type": "string"
+          },
+          "displayType": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
           },
           "type": {
             "type": "string",
@@ -987,6 +1191,57 @@
           }
         }
       },
+      "RoomBedroomForGuests": {
+        "type": "object",
+        "required": [
+          "bedTypes",
+          "displayType",
+          "id",
+          "title",
+          "type"
+        ],
+        "properties": {
+          "bedTypes": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "value": {
+                  "type": "string",
+                  "enum": [
+                    "dishwasher",
+                    "microwave",
+                    "oven",
+                    "stove"
+                  ]
+                },
+                "label": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "displayType": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string",
+            "enum": [
+              "Bathroom",
+              "Bedroom",
+              "Den",
+              "Kitchen",
+              "LivingRoom"
+            ]
+          }
+        }
+      },
       "RoomBedroomSummary": {
         "type": "object",
         "required": [
@@ -1033,6 +1288,36 @@
               "integer",
               "null"
             ]
+          },
+          "type": {
+            "type": "string",
+            "enum": [
+              "Bathroom",
+              "Bedroom",
+              "Den",
+              "Kitchen",
+              "LivingRoom"
+            ]
+          }
+        }
+      },
+      "RoomDenForGuests": {
+        "type": "object",
+        "required": [
+          "displayType",
+          "id",
+          "title",
+          "type"
+        ],
+        "properties": {
+          "displayType": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
           },
           "type": {
             "type": "string",
@@ -1118,6 +1403,57 @@
           }
         }
       },
+      "RoomKitchenForGuests": {
+        "type": "object",
+        "required": [
+          "appliances",
+          "displayType",
+          "id",
+          "title",
+          "type"
+        ],
+        "properties": {
+          "appliances": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "value": {
+                  "type": "string",
+                  "enum": [
+                    "dishwasher",
+                    "microwave",
+                    "oven",
+                    "stove"
+                  ]
+                },
+                "label": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "displayType": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string",
+            "enum": [
+              "Bathroom",
+              "Bedroom",
+              "Den",
+              "Kitchen",
+              "LivingRoom"
+            ]
+          }
+        }
+      },
       "RoomKitchenSummary": {
         "type": "object",
         "required": [
@@ -1164,6 +1500,36 @@
               "integer",
               "null"
             ]
+          },
+          "type": {
+            "type": "string",
+            "enum": [
+              "Bathroom",
+              "Bedroom",
+              "Den",
+              "Kitchen",
+              "LivingRoom"
+            ]
+          }
+        }
+      },
+      "RoomLivingRoomForGuests": {
+        "type": "object",
+        "required": [
+          "displayType",
+          "id",
+          "title",
+          "type"
+        ],
+        "properties": {
+          "displayType": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
           },
           "type": {
             "type": "string",
